# scry

./: .gitignore  AGENTS.md  BUILD.bazel  CHANGELOG.md  Cargo.toml  LICENSE-MIT  MODULE.bazel  README.md  claims.yaml  composition.wac  deny.toml  rivet.yaml
.github/workflows/: ci.yml  publish-to-crates-io.yml  release.yml  rivet-delta.yml  rocq-proofs.yml  verus-proofs.yml
artifacts/: aspice-vmodel.yaml  design.yaml  requirements.yaml  research-2.yaml  research.yaml  roadmap-2.0.yaml  roadmap-3.0.yaml  safety-case.yaml
contracts/: scry-invariants-v1.schema.json
crates/scry-analyze-core/: BUILD.bazel  Cargo.toml  README.md
crates/scry-analyze-core/src/: lib.rs
crates/scry-analyzer/: BUILD.bazel  Cargo.toml  README.md
crates/scry-analyzer/src/: lib.rs
crates/scry-analyzer/test-fixtures/: README.md  fixture-01-constant-fold.md  fixture-01-constant-fold.wat  fixture-02-with-param.md  fixture-02-with-param.wat  fixture-03-region-bounds.md  fixture-03-region-bounds.wat  fixture-04-call-indirect.md  fixture-04-call-indirect.wat  fixture-05-interproc.md  fixture-05-interproc.wat  fixture-07-bounded-local.md  fixture-07-bounded-local.wat  fixture-08-counted-loop.md  fixture-08-counted-loop.wat  fixture-09-loop-converge.md  fixture-09-loop-converge.wat  fixture-10-guard-bound.md  fixture-10-guard-bound.wat  fixture-11-var-bound.md  fixture-11-var-bound.wat  fixture-12-stack-chain.md  fixture-12-stack-chain.wat  fixture-13-stack-recursion.md  fixture-13-stack-recursion.wat  fixture-14-stack-dynamic.md  fixture-14-stack-dynamic.wat  fixture-15-stack-alloca.md  fixture-15-stack-alloca.wat  fixture-16-stack-measured.md  fixture-16-stack-measured.wat  fixture-17-reachability.md  fixture-17-reachability.wat  fixture-18-operand-stack.wat  fixture-19-named-functions.wat
crates/scry-analyzer/wit/: scry.wit
crates/scry-bits/: BUILD.bazel  Cargo.toml  README.md
crates/scry-bits/src/: lib.rs
crates/scry-float/: BUILD.bazel  Cargo.toml
crates/scry-float/src/: lib.rs
crates/scry-handle/: BUILD.bazel  Cargo.toml
crates/scry-handle/src/: lib.rs
crates/scry-host-tests/: Cargo.toml  README.md
crates/scry-host-tests/src/: lib.rs
crates/scry-host-tests/tests/: contract.rs  octagon.rs  provenance.rs  soundness.rs  taint.rs
crates/scry-interval/: BUILD.bazel  Cargo.toml  README.md
crates/scry-interval/src/: lib.rs
crates/scry-mcdc/: .gitignore  Cargo.toml  README.md  build-and-measure.sh  mcdc-gate.sh
crates/scry-mcdc/evidence/: viz-summary.json
crates/scry-mcdc/fixtures/: fixture-01-constant-fold.wasm  fixture-02-with-param.wasm  fixture-03-region-bounds.wasm  fixture-04-call-indirect.wasm  fixture-05-interproc.wasm  fixture-06-overflow.wasm  fixture-06-overflow.wat  fixture-08-counted-loop.wasm  fixture-09-loop-converge.wasm  fixture-10-guard-bound.wasm  fixture-11-var-bound.wasm  fixture-12-stack-chain.wasm  fixture-13-stack-recursion.wasm  fixture-14-stack-dynamic.wasm  fixture-15-stack-alloca.wasm  fixture-16-stack-measured.wasm  fixture-17-reachability.wasm
crates/scry-mcdc/src/: lib.rs
crates/scry-octagon/: BUILD.bazel  Cargo.toml  README.md
crates/scry-octagon/src/: lib.rs
crates/scry-pentagon/: BUILD.bazel  Cargo.toml
crates/scry-pentagon/src/: lib.rs
crates/scry-poly/: BUILD.bazel  Cargo.toml
crates/scry-poly/src/: lib.rs
crates/scry-provenance/: BUILD.bazel  Cargo.toml  README.md
crates/scry-provenance/src/: lib.rs
crates/scry-segment/: BUILD.bazel  Cargo.toml
crates/scry-segment/src/: lib.rs
crates/scry-taint/: BUILD.bazel  Cargo.toml  README.md
crates/scry-taint/src/: lib.rs
crates/scry-viz/: Cargo.toml  README.md
crates/scry-viz/src/: lib.rs  main.rs
crates/wasm-lattice/: BUILD.bazel  Cargo.toml  README.md
crates/wasm-lattice/src/: lib.rs
crates/wasm-lattice/wit/: wasm-lattice.wit
docs/: architecture.md  component-provenance-v1.md  credit-dossier-v1.md  intro-to-abstract-interpretation.md  invariant-schema-v1.md  octagon-and-soundness-v1.md  qualification-dossier-v1.md  remediation-guidance-v1.md  roadmap-2.0.md  roadmap.md  taint-noninterference-v1.md
proofs/rocq/: .gitignore  BUILD.bazel  BitsCongruence.v  CallGraph.v  Float.v  GuardRefine.v  Handle.v  Lattice.v  LoopFixpoint.v  OctagonProject.v  OctagonStrongClose.v  Pentagon.v  Poly.v  Reachability.v  Reachable.v  Region.v  Segment.v  Soundness.v  StackBound.v  WrapAdd.v  WriteSetHavoc.v
proofs/verus/: BUILD.bazel  join_proofs.rs  mod.rs
schemas/: research-ext.yaml
scripts/: publish.rs
spar/: scry.aadl
tools/: claim-check.py
