"""Top-level Bazel package for scry.

v1.1 (FEAT-013 / DD-011): the distributable `//:scry` is the
self-contained analyzer component itself, copied to the stable name
`scry.wasm`. Through v1.0 this was a `wac_compose` of the analyzer +
lattice components, but wac's `--import-dependencies` left the analyzer
as a root-level component import — a hollow ~2.6 KB shell wasmtime 45
rejects ("root-level component imports are not supported"), so the
composed `analyze()` could never run (the v1.0.1 open finding). Now that
the analyzer links the abstract-domain algebra as Rust crate deps
(scry-interval / scry-taint / scry-octagon) it imports only WASI and
runs standalone, so the distributable is simply that component — no wac
composition needed.

The wasm-lattice component still builds and exports the `domain`
interface (the DD-008 / DD-004 cross-component dogfood), but it is no
longer part of the distributable or on the analyzer's execution path.
"""

package(default_visibility = ["//visibility:public"])

# The distributable: the self-contained analyzer component, copied to the
# stable filename `scry.wasm` that release.yml and the host harness
# (crates/scry-host-tests) read.
#
# `//crates/scry-analyzer:scry_analyzer_component` is the PUBLIC alias the
# rust_wasm_component macro creates for the default (release) profile —
# `native.alias(name = {name}, actual = :{name}_release, visibility = ...)`,
# inheriting the analyzer package's public `default_visibility`. Its
# DefaultInfo is exactly one file: the packaged wasip2 component (~2.5 MB,
# analyzer embedded, WASI-only imports, validates). We copy that.
#
# (v1.1 history: an earlier revision pointed this at the private
# `scry_analyzer_component_release` sub-target, which is visible only to
# //crates/scry-analyzer:__pkg__ — a cross-package visibility error that
# broke the build. The public alias resolves to the identical file.)
genrule(
    name = "scry",
    srcs = ["//crates/scry-analyzer:scry_analyzer_component"],
    outs = ["scry.wasm"],
    cmd = "cp $(location //crates/scry-analyzer:scry_analyzer_component) $@",
)
