# Root Cargo workspace. Exists primarily so crate_universe.from_cargo
# in MODULE.bazel has a single workspace to resolve dependencies
# against — see DD-009 for the Bazel-first build story.
#
# Members are the Wasm-component crates under crates/. wit-bindgen is
# injected by rules_wasm_component via @crates so it doesn't need to
# be listed here; bitflags is the one transitive dep the rule's
# generated bindings hardcode (defaulting to @crates//:bitflags), so
# we pull it into the workspace explicitly.
#
# [workspace.package] is the single source of truth for version /
# edition / license / repository across all member crates — per the
# PulseEngine family convention (witness pattern).

[workspace]
resolver = "3"
members = [
    "crates/wasm-lattice",
    "crates/scry-analyzer",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pulseengine/scry"
authors = ["Ralf Anton Beier and scry contributors"]

[workspace.dependencies]
bitflags = "2"
# Wasm Core Model parsing for the v0.2 scry analyzer (FEAT-001 AC#1).
# default-features = false keeps the crate buildable under #![no_std]
# inside the wasm32-wasip2 component (the std feature pulls in alloc
# adapters we already provide via `extern crate alloc`).
wasmparser = { version = "0.247", default-features = false }
# SHA-256 of the input module bytes for `invariant-bundle.module-sha256`
# (FEAT-001 AC#1). default-features = false drops the std default and
# keeps the dep no_std-compatible.
sha2 = { version = "0.10", default-features = false }
