# Root Cargo workspace. Exists primarily so crate_universe.from_cargo
# in MODULE.bazel has a single workspace to resolve dependencies
# against — see DD-009 for the Bazel-first build story.
#
# Members are the Wasm-component crates under crates/. wit-bindgen is
# injected by rules_wasm_component via @crates so it doesn't need to
# be listed here; bitflags is the one transitive dep the rule's
# generated bindings hardcode (defaulting to @crates//:bitflags), so
# we pull it into the workspace explicitly.
#
# scry-host-tests is the host-side wasmtime harness (FEAT-001 AC#3):
# a native Rust crate built with cargo (not a Wasm component). It
# loads the composed bazel-bin/scry.wasm in a wasmtime embedding,
# invokes the analyzer over each test fixture, and asserts that the
# returned abstract intervals over-approximate concrete execution.
#
# [workspace.package] is the single source of truth for version /
# edition / license / repository across all member crates — per the
# PulseEngine family convention (witness pattern).

[workspace]
resolver = "3"
members = [
    "crates/wasm-lattice",
    "crates/scry-analyzer",
    "crates/scry-provenance",
    "crates/scry-taint",
    "crates/scry-octagon",
    "crates/scry-interval",
    "crates/scry-bits",
    "crates/scry-analyze-core",
    "crates/scry-host-tests",
    "crates/scry-viz",
]
# `wasm-lattice` and `scry-analyzer` are the Wasm-component crates
# (`crate-type = ["cdylib"]`, `#![no_std]`; `scry-analyzer` additionally
# `export!`s the rules_wasm_component-generated
# `scry_analyzer_component_bindings`, which only exist under the Bazel wasm
# build — see DD-009). Neither can be compiled by a native host `cargo build`
# (no panic handler / unresolved bindings crate). They stay in `members` so
# Bazel's crate_universe.from_cargo still resolves their deps, but are excluded
# from `default-members`, so a bare `cargo build` — e.g. the one the witness
# compliance release action runs at the workspace root — skips them instead of
# failing. The remaining crates are plain rlibs that build natively. Native CI
# jobs already build specific crates with explicit `-p`/`--package`.
default-members = [
    "crates/scry-provenance",
    "crates/scry-taint",
    "crates/scry-octagon",
    "crates/scry-interval",
    "crates/scry-bits",
    "crates/scry-analyze-core",
    "crates/scry-host-tests",
    "crates/scry-viz",
]

[workspace.package]
# Aligned with the release-tag line (v1.x = SCRY_VERSION) so the crate version
# on crates.io matches the release artifacts. The crates.io publish workflow
# asserts the pushed `v*` tag equals this version, so a release bump must move
# both in lockstep (and the internal path-dep `version = "..."` fields below).
version = "2.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pulseengine/scry"
homepage = "https://pulseengine.eu"
authors = ["Ralf Anton Beier and scry contributors"]
keywords = ["wasm", "abstract-interpretation", "verification", "static-analysis"]
categories = ["development-tools", "wasm", "no-std"]

[workspace.dependencies]
bitflags = "2"
# Wasm Core Model parsing for the v0.2 scry analyzer (FEAT-001 AC#1).
# default-features = false keeps the crate buildable under #![no_std]
# inside the wasm32-wasip2 component (the std feature pulls in alloc
# adapters we already provide via `extern crate alloc`).
wasmparser = { version = "0.252", default-features = false }
# SHA-256 of the input module bytes for `invariant-bundle.module-sha256`
# (FEAT-001 AC#1). default-features = false drops the std default and
# keeps the dep no_std-compatible.
sha2 = { version = "0.10", default-features = false }

# ── Host-side wasmtime harness deps (FEAT-001 AC#3) ──────────────────
# These are only consumed by the native scry-host-tests crate; the
# wasm32-wasip2 component crates (wasm-lattice, scry-analyzer) do not
# touch them. wasmtime/wasmtime-wasi pull in std unconditionally —
# that's fine because scry-host-tests is a native cargo crate.
#
# wat compiles the in-repo `.wat` fixtures to Wasm bytes at test time
# so we don't need to check in binary blobs alongside the source.
#
# anyhow keeps the test-side error plumbing terse — every test path
# bubbles errors up to the `#[test]` panic, so we don't need a
# bespoke error enum.
wasmtime = "45"
wasmtime-wasi = "45"
wat = "1"
anyhow = "1"

# ── FEAT-008: invariant JSON-schema contract validation (native) ─────
# Consumed only by the native scry-host-tests crate's contract test
# (tests/contract.rs). serde derives the representative analysis-result
# structs, serde_json serializes them, and jsonschema validates the
# serialized value against contracts/scry-invariants-v1.schema.json.
# None of these reach the wasm32-wasip2 component build.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pinned to =0.18.3 for a deterministic API surface. The contract test
# uses the default-feature `JSONSchema::compile` + `is_valid` API, which
# is available without the `resolve-*` features (the crate-root
# `validator_for` / `Validator` re-exports are gated behind those).
jsonschema = "=0.18.3"
