"""scry — sound abstract interpretation for WebAssembly.

Bazel module definition. The component build is driven by
`rules_wasm_component` v1.0.0 (per DD-009).
"""

module(
    name = "scry",
    version = "0.1.0",
)

bazel_dep(name = "rules_wasm_component", version = "1.0.0")

# rules_wasm_component is not (yet) in the Bazel Central Registry —
# pin to the canonical PulseEngine GitHub source. Update the commit
# pin when the rules ship a registry release.
git_override(
    module_name = "rules_wasm_component",
    remote = "https://github.com/pulseengine/rules_wasm_component.git",
    commit = "d2347fbf79ee5d4e20de0df7e8c1bb3adadf5cfe",
)
bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")

# Rust toolchain — required for wasm32-wasip2 component builds.
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    extra_target_triples = [
        "wasm32-wasip2",
    ],
    versions = ["1.91.1"],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

# Cargo workspace deps via crate_universe. The `@crates` alias makes
# the resolved crate repository visible under the name that
# rules_wasm_component's macro hardcodes for bindgen runtime deps
# (notably `@crates//:bitflags`).
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "scry_crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
    supported_platform_triples = [
        "wasm32-wasip2",
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
    ],
)
use_repo(crate, "scry_crates", "crates")

# WASI WIT package definitions (provides @wasi_cli, @wasi_io, etc.).
# v0.1 doesn't import any wasi interfaces directly — the analyzer is a
# pure-computation component — but the toolchain wires them in by
# default and downstream crates will need them as the analyzer grows.
wasi_wit_ext = use_extension(
    "@rules_wasm_component//wasm:extensions.bzl",
    "wasi_wit",
)
wasi_wit_ext.init()
use_repo(
    wasi_wit_ext,
    "wasi_cli",
    "wasi_clocks",
    "wasi_filesystem",
    "wasi_io",
    "wasi_random",
)

# ─────────────────────────────────────────────────────────────────────
# Proof toolchains — FEAT-012 (v0.2)
#
# Mirrors the synth / meld / loom integration pattern (rules-survey
# 2026-05-27). Two proof families:
#
#   * rules_verus       — SMT-based Rust verification (Verus + Z3).
#                         Ships pre-built toolchain binaries; no Nix
#                         dependency.
#   * rules_rocq_rust   — Rocq 9.0 mechanized proofs, optionally
#                         consuming rocq-of-rust output. Toolchain
#                         is provisioned hermetically via Nix.
#
# Commit pins below are the synth-verified known-good revisions from
# the 2026-05-27 rules survey; bump in lockstep with synth/loom when
# they advance.
# ─────────────────────────────────────────────────────────────────────

bazel_dep(name = "rules_verus", version = "0.0.0")
git_override(
    module_name = "rules_verus",
    remote = "https://github.com/pulseengine/rules_verus.git",
    commit = "a49f72ef",
)
verus = use_extension("@rules_verus//verus:extensions.bzl", "verus")
use_repo(verus, "verus_toolchains")
register_toolchains("@verus_toolchains//:all")

bazel_dep(name = "rules_rocq_rust", version = "0.1.0")
git_override(
    module_name = "rules_rocq_rust",
    remote = "https://github.com/pulseengine/rules_rocq_rust.git",
    commit = "090b875c6e83e32e25918f31b8c58919ff16467e",
)
rocq = use_extension("@rules_rocq_rust//rocq:extensions.bzl", "rocq")
rocq.toolchain(version = "9.0", strategy = "nix", with_rocq_of_rust_deps = True)
use_repo(rocq, "rocq_toolchains")
register_toolchains("@rocq_toolchains//:all")

bazel_dep(name = "rules_nixpkgs_core", version = "0.13.0")
nix_repo = use_extension(
    "@rules_nixpkgs_core//extensions:repository.bzl",
    "nix_repo",
)
nix_repo.github(
    name = "nixpkgs",
    org = "NixOS",
    repo = "nixpkgs",
    commit = "6201e203d09599479a3b3450ed24fa81537ebc4e",
    sha256 = "",
)
use_repo(nix_repo, "nixpkgs")
