[package]
name = "scry-sai-core"
description = "Pure, bindgen-free analyzer core for scry (FEAT-014 / DD-012): the wasmparser + fixpoint + transfer logic and its plain-Rust result types, extracted from scry-analyzer so the analyzer's real decisions can be instrumented for witness MC/DC and the component becomes a thin canonical-ABI wrapper."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Pure library — same dual-compile pattern as scry-interval / scry-taint /
# scry-octagon / scry-provenance: `#![no_std]` + `extern crate alloc`, no
# wit-bindgen. It compiles natively (scry-host-tests + the witness MC/DC
# harness drive it) AND to wasm32-unknown-unknown (a core module witness
# instruments) AND, once the component wrapper lands, into the shipped
# wasm32-wasip2 analyzer component. DD-012: this is the lever that makes
# MC/DC land on the real shipped analyzer decisions, not a copy.
#
# Step 1 (this commit) defines the plain-Rust result-type surface mirroring
# the analyzer's WIT (`crates/scry-analyzer/wit/scry.wit`). Later steps move
# the analyze body + helpers here (adding wasmparser / sha2 / scry-taint /
# scry-octagon / scry-provenance deps) and rewire the component as a thin
# Guest wrapper that converts between these types and the WIT bindings.
[lib]
name = "scry_analyze_core"
path = "src/lib.rs"

[dependencies]
# Interval + Region are field-identical to the WIT `interval` /
# `region-pointer-payload`, so the core reuses the pure types directly
# (the analyzer's region transfer ops then need no conversion).
# Path deps carry `version` so `cargo publish` rewrites them to the crates.io
# coordinate (crates.io rejects path-only deps). The version equals the
# workspace version and must be bumped in lockstep with it.
scry-sai-interval = { path = "../scry-interval", version = "1.17.0" }

# Step 2 (DD-012): the analyze body + helpers moved here. wasmparser parses
# the input Wasm Core Model module; sha2 digests the module bytes for
# `invariant-bundle.module-sha256`. Both `default-features = false` (set in
# the workspace dep table) so the crate stays `#![no_std]` and compiles to
# wasm32-unknown-unknown / wasm32-wasip2.
wasmparser = { workspace = true }
sha2 = { workspace = true }

# Security-label (taint) lattice for the noninterference analysis (FEAT-009)
# and the pure meld<->scry provenance boundary crate (FEAT-002 / DD-002).
scry-sai-taint = { path = "../scry-taint", version = "1.17.0" }
scry-sai-provenance = { path = "../scry-provenance", version = "1.17.0" }

# Octagon relational domain (FEAT-016 slice-2b-ii): carried alongside the
# intervals through the structured-CFG fixpoint so a loop counter bounded by a
# VARIABLE relation (`i < n`) stays bounded where the interval domain alone
# widens it to ⊤. Same pure `#![no_std]` dual-compile crate as scry-interval.
scry-sai-octagon = { path = "../scry-octagon", version = "1.17.0" }

[dev-dependencies]
# Test-only (the crate is otherwise dep-light + no_std): assemble the .wat
# corpus fixtures to Wasm bytes so the FEAT-016 loop-fixpoint tests can drive
# analyze() natively, without a composed component or Bazel. Not pulled into
# the wasm32 build of the crate.
wat = { workspace = true }
