[package]
name = "scry-sai-core"
description = "Pure, bindgen-free analyzer core for scry (FEAT-014 / DD-012): the wasmparser + fixpoint + transfer logic and its plain-Rust result types, extracted from scry-analyzer so the analyzer's real decisions can be instrumented for witness MC/DC and the component becomes a thin canonical-ABI wrapper."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Pure library — same dual-compile pattern as scry-interval / scry-taint /
# scry-octagon / scry-provenance: `#![no_std]` + `extern crate alloc`, no
# wit-bindgen. It compiles natively (scry-host-tests + the witness MC/DC
# harness drive it) AND to wasm32-unknown-unknown (a core module witness
# instruments) AND, once the component wrapper lands, into the shipped
# wasm32-wasip2 analyzer component. DD-012: this is the lever that makes
# MC/DC land on the real shipped analyzer decisions, not a copy.
#
# Step 1 (this commit) defines the plain-Rust result-type surface mirroring
# the analyzer's WIT (`crates/scry-analyzer/wit/scry.wit`). Later steps move
# the analyze body + helpers here (adding wasmparser / sha2 / scry-taint /
# scry-octagon / scry-provenance deps) and rewire the component as a thin
# Guest wrapper that converts between these types and the WIT bindings.
[lib]
name = "scry_analyze_core"
path = "src/lib.rs"

[dependencies]
# Interval + Region are field-identical to the WIT `interval` /
# `region-pointer-payload`, so the core reuses the pure types directly
# (the analyzer's region transfer ops then need no conversion).
# Path deps carry `version` so `cargo publish` rewrites them to the crates.io
# coordinate (crates.io rejects path-only deps). The version equals the
# workspace version and must be bumped in lockstep with it.
scry-sai-interval = { path = "../scry-interval", version = "3.1.0" }

# Step 2 (DD-012): the analyze body + helpers moved here. wasmparser parses
# the input Wasm Core Model module; sha2 digests the module bytes for
# `invariant-bundle.module-sha256`. Both `default-features = false` (set in
# the workspace dep table) so the crate stays `#![no_std]` and compiles to
# wasm32-unknown-unknown / wasm32-wasip2.
wasmparser = { workspace = true }
sha2 = { workspace = true }

# Security-label (taint) lattice for the noninterference analysis (FEAT-009)
# and the pure meld<->scry provenance boundary crate (FEAT-002 / DD-002).
scry-sai-taint = { path = "../scry-taint", version = "3.1.0" }
scry-sai-provenance = { path = "../scry-provenance", version = "3.1.0" }

# Octagon relational domain (FEAT-016 slice-2b-ii): carried alongside the
# intervals through the structured-CFG fixpoint so a loop counter bounded by a
# VARIABLE relation (`i < n`) stays bounded where the interval domain alone
# widens it to ⊤. Same pure `#![no_std]` dual-compile crate as scry-interval.
scry-sai-octagon = { path = "../scry-octagon", version = "3.1.0" }

# Known-bits × interval-guarded congruence reduced product (FEAT-037 / DD-017):
# an additive bit/alignment/stride companion computed in a straight-line-sound
# pass, surfaced library-only on `AnalysisResult.bit_facts`. Same pure
# `#![no_std]` dual-compile crate as the other domains.
scry-sai-bits = { path = "../scry-bits", version = "3.1.0" }

# Pentagons weakly-relational domain (FEAT-044 / AC-014): intervals + strict
# `x < y` facts, the cheap relational layer behind sound out-of-bounds-trap
# detection (FEAT-046). An additive guard-recording pass surfaces proven
# strict relations library-only on `AnalysisResult.pentagon_facts`. Same pure
# `#![no_std]` dual-compile crate as the other domains.
scry-sai-pentagon = { path = "../scry-pentagon", version = "3.1.0" }

# IEEE-754 float-interval domain (FEAT-047 / AC-022): sound f32/f64 abstraction
# with NaN/±inf tracking + round-to-nearest-aware widening. An additive
# straight-line pass surfaces sound float intervals library-only on
# `AnalysisResult.float_facts`. Same pure `#![no_std]` dual-compile crate.
scry-sai-float = { path = "../scry-float", version = "3.1.0" }

# Affine Component-Model handle-state lattice (FEAT-049 / MF-007): tracks
# own/borrow resource-handle state to flag use-after-drop / double-drop. A
# straight-line pass over the canonical-ABI `[resource-drop]` call sites
# surfaces findings library-only on `AnalysisResult.handle_findings`.
scry-sai-handle = { path = "../scry-handle", version = "3.1.0" }

# FEAT-058: the linear-memory segmentation domain (content-sensitive memory).
# The interpreter tracks per-offset interval content for i32 loads/stores
# instead of degrading every load to ⊤.
scry-sai-segment = { path = "../scry-segment", version = "3.1.0" }

[dev-dependencies]
# Test-only (the crate is otherwise dep-light + no_std): assemble the .wat
# corpus fixtures to Wasm bytes so the FEAT-016 loop-fixpoint tests can drive
# analyze() natively, without a composed component or Bazel. Not pulled into
# the wasm32 build of the crate.
wat = { workspace = true }
