"""scry-analyzer — the scry abstract interpreter as a Wasm component.

v1.1 (FEAT-013 / DD-011): self-contained. The interval/region/taint/
octagon algebra is linked as Rust crate dependencies (scry-interval,
scry-taint, scry-octagon, scry-provenance), NOT imported over WIT, so
the composed component imports only WASI and runs standalone in
wasmtime — closing the v1.0.1 open finding. The wasm-lattice component
still exports the same `domain` interface (DD-008 dogfood), but it is no
longer on the analyzer's execution path.
"""

load("@rules_wasm_component//rust:defs.bzl", "rust_wasm_component_bindgen")
load("@rules_wasm_component//wit:defs.bzl", "wit_library")

package(default_visibility = ["//visibility:public"])

# WIT interface this component exports. v1.1: no `deps` — the world no
# longer imports pulseengine:wasm-lattice (the `interval` record is
# declared locally in scry.wit), so wit-bindgen needs no cross-package
# resolution and the composed component carries no root-level component
# import for wasmtime to reject.
wit_library(
    name = "scry_analyzer_wit",
    package_name = "pulseengine:scry@0.1.0",
    srcs = ["wit/scry.wit"],
    world = "scry",
)

# The Wasm component. The `_bindings` crate produced by the macro is
# `scry_analyzer_component_bindings`; it carries both the exported
# `analyzer` interface and the imported `domain` namespace.
#
# v0.2 (FEAT-001 AC#1) wires in the real interval-domain fixpoint:
# `wasmparser` parses the input module, `sha2` hashes the bytes for
# the invariant bundle's `module_sha256`. Both come from the workspace
# `[workspace.dependencies]` via `crate_universe` — the apparent repo
# name is `@scry_crates` (configured in MODULE.bazel) so the @crates
# label that rules_wasm_component exposes for its own internal deps
# doesn't shadow our workspace deps.
rust_wasm_component_bindgen(
    name = "scry_analyzer_component",
    srcs = ["src/lib.rs"],
    profiles = ["release"],
    wit = ":scry_analyzer_wit",
    deps = [
        "@scry_crates//:wasmparser",
        "@scry_crates//:sha2",
        # FEAT-002 (DD-002): the pure meld<->scry boundary crate. A
        # first-party rust_library (no external deps) cross-compiled to
        # wasm32-wasip2 alongside this component; provides the
        # `component-provenance` section decode + projection lookup.
        "//crates/scry-provenance:scry_provenance",
        # FEAT-013 (DD-011): the abstract-domain algebra as crate deps,
        # replacing the WIT `pulseengine:wasm-lattice/domain` import so the
        # analyzer is self-contained and executable. scry-interval is the
        # interval+region domain (extracted from wasm-lattice); scry-taint
        # the security-label domain; scry-octagon the relational domain.
        "//crates/scry-interval:scry_interval",
        "//crates/scry-taint:scry_taint",
        "//crates/scry-octagon:scry_octagon",
    ],
)
