"""scry-analyzer — the v0.1 interval-domain abstract interpreter as
a Wasm component. Imports the `pulseengine:wasm-lattice/domain`
interface from `//crates/wasm-lattice` (per DD-008's dogfood story).
"""

load("@rules_wasm_component//rust:defs.bzl", "rust_wasm_component_bindgen")
load("@rules_wasm_component//wit:defs.bzl", "wit_library")

package(default_visibility = ["//visibility:public"])

# WIT interface this component exports — declares the cross-package
# import of pulseengine:wasm-lattice via deps. The Bazel rule builds
# the proper `deps/` directory layout under bazel-bin so wit-bindgen
# can resolve `use pulseengine:wasm-lattice/domain@0.1.0` at codegen
# time.
wit_library(
    name = "scry_analyzer_wit",
    package_name = "pulseengine:scry@0.1.0",
    srcs = ["wit/scry.wit"],
    world = "scry",
    deps = ["//crates/wasm-lattice:wasm_lattice_wit"],
)

# The Wasm component. The `_bindings` crate produced by the macro is
# `scry_analyzer_component_bindings`; it carries both the exported
# `analyzer` interface and the imported `domain` namespace.
#
# v0.2 (FEAT-001 AC#1) wires in the real interval-domain fixpoint:
# `wasmparser` parses the input module, `sha2` hashes the bytes for
# the invariant bundle's `module_sha256`. Both come from the workspace
# `[workspace.dependencies]` via `crate_universe` — the apparent repo
# name is `@scry_crates` (configured in MODULE.bazel) so the @crates
# label that rules_wasm_component exposes for its own internal deps
# doesn't shadow our workspace deps.
rust_wasm_component_bindgen(
    name = "scry_analyzer_component",
    srcs = ["src/lib.rs"],
    profiles = ["release"],
    wit = ":scry_analyzer_wit",
    deps = [
        "@scry_crates//:wasmparser",
        "@scry_crates//:sha2",
        # FEAT-002 (DD-002): the pure meld<->scry boundary crate. A
        # first-party rust_library (no external deps) cross-compiled to
        # wasm32-wasip2 alongside this component; provides the
        # `component-provenance` section decode + projection lookup.
        "//crates/scry-provenance:scry_provenance",
    ],
)
