"""scry-analyzer — the scry abstract interpreter as a Wasm component.

v1.1 (FEAT-013 / DD-011): self-contained. The interval/region/taint/
octagon algebra is linked as Rust crate dependencies (scry-interval,
scry-taint, scry-octagon, scry-provenance), NOT imported over WIT, so
the composed component imports only WASI and runs standalone in
wasmtime — closing the v1.0.1 open finding. The wasm-lattice component
still exports the same `domain` interface (DD-008 dogfood), but it is no
longer on the analyzer's execution path.
"""

load("@rules_wasm_component//rust:defs.bzl", "rust_wasm_component_bindgen")
load("@rules_wasm_component//wit:defs.bzl", "wit_library")

package(default_visibility = ["//visibility:public"])

# WIT interface this component exports. v1.1: no `deps` — the world no
# longer imports pulseengine:wasm-lattice (the `interval` record is
# declared locally in scry.wit), so wit-bindgen needs no cross-package
# resolution and the composed component carries no root-level component
# import for wasmtime to reject.
wit_library(
    name = "scry_analyzer_wit",
    package_name = "pulseengine:scry@0.1.0",
    srcs = ["wit/scry.wit"],
    world = "scry",
)

# The Wasm component. The `_bindings` crate produced by the macro is
# `scry_analyzer_component_bindings`; it carries the exported `analyzer`
# interface.
#
# DD-012 (FEAT-014): the analyze logic moved into the pure
# scry-analyze-core crate, so this component is a thin wrapper that converts
# between the wit-bindgen types and the core's plain-Rust mirrors. The core
# carries the wasmparser / sha2 / scry-interval / scry-taint /
# scry-provenance deps transitively (it is itself cross-compiled to
# wasm32-wasip2), so the component depends only on it.
rust_wasm_component_bindgen(
    name = "scry_analyzer_component",
    srcs = ["src/lib.rs"],
    profiles = ["release"],
    wit = ":scry_analyzer_wit",
    deps = [
        "//crates/scry-analyze-core:scry_analyze_core",
    ],
)
