[package]
name = "scry-analyzer"
description = "scry interval-domain abstract interpreter as a Wasm component."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags = { workspace = true }

# v0.2 (FEAT-001 AC#1): the real interval-domain fixpoint.
# wasmparser parses the input Wasm Core Model module; sha2 digests
# the module bytes for `invariant-bundle.module-sha256`. Both are
# `default-features = false` so the crate stays `#![no_std]` and
# compiles cleanly to wasm32-wasip2.
#
# The macro-generated bindings crate
# (scry_analyzer_component_bindings) is injected by
# rules_wasm_component.
wasmparser = { workspace = true }
sha2 = { workspace = true }

# FEAT-002 (DD-002): the pure meld<->scry provenance boundary crate.
# Same source compiles into this wasm32-wasip2 component and natively
# into scry-host-tests. The Bazel build wires it via the
# //crates/scry-provenance:scry_provenance rust_library target; this
# path entry keeps the cargo metadata coherent.
scry-provenance = { path = "../scry-provenance" }
