[package]
name = "scry-analyzer"
description = "scry interval-domain abstract interpreter as a Wasm component."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# DD-012 (FEAT-014): the analyze logic now lives in the pure, bindgen-free
# scry-analyze-core crate; this component is a thin wrapper that converts
# between the wit-bindgen types and the core's plain-Rust mirrors. The core
# pulls in wasmparser / sha2 / scry-interval / scry-taint / scry-provenance
# transitively, so the wrapper depends only on it (plus the
# rules_wasm_component-injected scry_analyzer_component_bindings crate).
# Bazel wires the matching //crates/scry-analyze-core rust_library target;
# this path entry keeps the cargo metadata coherent.
scry-analyze-core = { path = "../scry-analyze-core" }
